# tinyToolkit

./: .gitignore  CMakeLists.txt  README.md
source/application/: CMakeLists.txt  application.cpp  application.h  signal.cpp  signal.h
source/common/: CMakeLists.txt  define.h  function.h  platform.h  symbol.h  version.h
source/convert/: CMakeLists.txt  base64.cpp  base64.h  url.cpp  url.h
source/debug/: CMakeLists.txt  coreDump.cpp  coreDump.h  stacktrace.cpp  stacktrace.h
source/hash/: CMakeLists.txt  hmac_md5.cpp  hmac_md5.h  hmac_sha1.cpp  hmac_sha1.h  hmac_sha224.cpp  hmac_sha224.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha384.cpp  hmac_sha384.h  hmac_sha512.cpp  hmac_sha512.h  md5.cpp  md5.h  sha1.cpp  sha1.h  sha224.cpp  sha224.h  sha256.cpp  sha256.h  sha384.cpp  sha384.h  sha512.cpp  sha512.h
source/id/: CMakeLists.txt  snowflake.cpp  snowflake.h  unique.cpp  unique.h
source/option/: CMakeLists.txt  any.cpp  any.h  description.cpp  description.h  descriptionGroup.cpp  descriptionGroup.h  option.cpp  option.h  traits.cpp  traits.h  type.cpp  type.h  value.cpp  value.h
source/pool/: CMakeLists.txt  objectPool.cpp  objectPool.h  threadPool.cpp  threadPool.h
source/system/: CMakeLists.txt  disk.cpp  disk.h  endian.cpp  endian.h  environment.cpp  environment.h  memory.cpp  memory.h  system.cpp  system.h
source/test/: CMakeLists.txt  case.cpp  case.h  compare.cpp  compare.h  console.cpp  console.h  environment.cpp  environment.h  failure.cpp  failure.h  message.cpp  message.h  result.cpp  result.h  test.cpp  test.h  unit.cpp  unit.h  util.cpp  util.h
source/time/: CMakeLists.txt  time.cpp  time.h  timer.cpp  timer.h  timerTask.cpp  timerTask.h
support/cmake/check/: CheckBuildType.cmake  CheckCompiler.cmake  (+3 more)
test/: CMakeLists.txt
test/application/: CMakeLists.txt  application.cpp  application.h  main.cpp  main.h  signal.cpp  signal.h
test/convert/: CMakeLists.txt  base64.cpp  base64.h  main.h  url.cpp  url.h
test/debug/: CMakeLists.txt  coreDump.cpp  coreDump.h  main.h  stacktrace.cpp  stacktrace.h
test/hash/: CMakeLists.txt  hmac_md5.cpp  hmac_md5.h  hmac_sha1.cpp  hmac_sha1.h  hmac_sha224.cpp  hmac_sha224.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha384.cpp  hmac_sha384.h  hmac_sha512.cpp  hmac_sha512.h  main.h  md5.cpp  md5.h  sha1.cpp  sha1.h  sha224.cpp  sha224.h  sha256.cpp  sha256.h  sha384.cpp  sha384.h  sha512.cpp  sha512.h
test/id/: CMakeLists.txt  main.h  snowflake.cpp  snowflake.h  unique.cpp  unique.h
test/option/: CMakeLists.txt  description.cpp  description.h  descriptionGroup.cpp  descriptionGroup.h  main.h  option.cpp  option.h
test/pool/: CMakeLists.txt  main.h  objectPool.cpp  objectPool.h  threadPool.cpp  threadPool.h
test/system/: CMakeLists.txt  disk.cpp  disk.h  endian.cpp  endian.h  environment.cpp  environment.h  main.h  memory.cpp  memory.h  system.cpp  system.h
test/time/: CMakeLists.txt  main.h  time.cpp  time.h  timer.cpp  timer.h
(+4 files in other folders)
